manifests/hardened/hardened-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hardened-demo
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hardened-webapp
  namespace: hardened-demo
  labels:
    app: hardened-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hardened-webapp
  template:
    metadata:
      labels:
        app: hardened-webapp
    spec:
      serviceAccountName: webapp-sa
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: nginxinc/nginx-unprivileged:1.29-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp
            - name: app-secret
              mountPath: /etc/webapp-secrets
              readOnly: true
      volumes:
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: app-secret
          secret:
            secretName: webapp-secret
---
apiVersion: v1
kind: Service
metadata:
  name: hardened-webapp
  namespace: hardened-demo
spec:
  type: ClusterIP
  selector:
    app: hardened-webapp
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-and-webapp-ingress
  namespace: hardened-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webapp-from-namespace
  namespace: hardened-demo
spec:
  podSelector:
    matchLabels:
      app: hardened-webapp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
